--- a/4.16.39 Homework.ipynb
+++ b/4.16.39 Homework.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "33de4fa0-4c6b-412e-9d31-b60b777ec39a",
    "metadata": {},
    "outputs": [],
@@ -34,14 +34,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151b3282-b3ba-4c94-aed8-4dd9834de019",
-   "metadata": {},
-   "source": [
-    "#### Standard Exercises"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "27b04ce2-c877-4690-ab17-0936ded72eca",
    "metadata": {},
    "source": [
@@ -50,10 +42,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6463c1ad-2110-4b98-a38f-35bd37013443",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>Incoming Calls</th>\n",
+       "      <th>Answered Calls</th>\n",
+       "      <th>Answer Rate</th>\n",
+       "      <th>Abandoned Calls</th>\n",
+       "      <th>Answer Speed (AVG)</th>\n",
+       "      <th>Talk Duration (AVG)</th>\n",
+       "      <th>Waiting Time (AVG)</th>\n",
+       "      <th>Service Level (20 Seconds)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>990</th>\n",
+       "      <td>991</td>\n",
+       "      <td>161</td>\n",
+       "      <td>150</td>\n",
+       "      <td>93.17%</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0:00:36</td>\n",
+       "      <td>0:02:51</td>\n",
+       "      <td>0:05:53</td>\n",
+       "      <td>52.80%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441</th>\n",
+       "      <td>442</td>\n",
+       "      <td>140</td>\n",
+       "      <td>130</td>\n",
+       "      <td>92.86%</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0:00:29</td>\n",
+       "      <td>0:02:31</td>\n",
+       "      <td>0:07:35</td>\n",
+       "      <td>62.32%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432</th>\n",
+       "      <td>433</td>\n",
+       "      <td>177</td>\n",
+       "      <td>156</td>\n",
+       "      <td>88.14%</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0:00:42</td>\n",
+       "      <td>0:02:39</td>\n",
+       "      <td>0:03:16</td>\n",
+       "      <td>42.37%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>155</td>\n",
+       "      <td>58</td>\n",
+       "      <td>55</td>\n",
+       "      <td>94.83%</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0:00:16</td>\n",
+       "      <td>0:02:11</td>\n",
+       "      <td>0:02:45</td>\n",
+       "      <td>74.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>131</td>\n",
+       "      <td>85</td>\n",
+       "      <td>79</td>\n",
+       "      <td>92.94%</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0:00:18</td>\n",
+       "      <td>0:02:25</td>\n",
+       "      <td>0:01:53</td>\n",
+       "      <td>77.38%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Index  Incoming Calls  Answered Calls Answer Rate  Abandoned Calls  \\\n",
+       "990    991             161             150      93.17%               11   \n",
+       "441    442             140             130      92.86%               10   \n",
+       "432    433             177             156      88.14%               21   \n",
+       "154    155              58              55      94.83%                3   \n",
+       "130    131              85              79      92.94%                6   \n",
+       "\n",
+       "    Answer Speed (AVG) Talk Duration (AVG) Waiting Time (AVG)  \\\n",
+       "990            0:00:36             0:02:51            0:05:53   \n",
+       "441            0:00:29             0:02:31            0:07:35   \n",
+       "432            0:00:42             0:02:39            0:03:16   \n",
+       "154            0:00:16             0:02:11            0:02:45   \n",
+       "130            0:00:18             0:02:25            0:01:53   \n",
+       "\n",
+       "    Service Level (20 Seconds)  \n",
+       "990                     52.80%  \n",
+       "441                     62.32%  \n",
+       "432                     42.37%  \n",
+       "154                     74.14%  \n",
+       "130                     77.38%  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell - do not delete it\n",
     "cc = pd.read_csv(\"data/Call Center Data.csv\")\n",
@@ -62,10 +179,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f315ec99-849c-4f95-ba07-7f2410128240",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1251 entries, 0 to 1250\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                      Non-Null Count  Dtype \n",
+      "---  ------                      --------------  ----- \n",
+      " 0   Index                       1251 non-null   int64 \n",
+      " 1   Incoming Calls              1251 non-null   int64 \n",
+      " 2   Answered Calls              1251 non-null   int64 \n",
+      " 3   Answer Rate                 1251 non-null   object\n",
+      " 4   Abandoned Calls             1251 non-null   int64 \n",
+      " 5   Answer Speed (AVG)          1251 non-null   object\n",
+      " 6   Talk Duration (AVG)         1251 non-null   object\n",
+      " 7   Waiting Time (AVG)          1251 non-null   object\n",
+      " 8   Service Level (20 Seconds)  1251 non-null   object\n",
+      "dtypes: int64(4), object(5)\n",
+      "memory usage: 88.1+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "cc.info()"
    ]
@@ -99,10 +239,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "39bcdb30-715a-488f-8a6c-bedc69093795",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>Incoming Calls</th>\n",
+       "      <th>Answered Calls</th>\n",
+       "      <th>Answer Rate</th>\n",
+       "      <th>Abandoned Calls</th>\n",
+       "      <th>Answer Speed (AVG)</th>\n",
+       "      <th>Talk Duration (AVG)</th>\n",
+       "      <th>Waiting Time (AVG)</th>\n",
+       "      <th>Service Level (20 Seconds)</th>\n",
+       "      <th>Answer Speed (sec)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>217</td>\n",
+       "      <td>204</td>\n",
+       "      <td>94.01%</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0:00:17</td>\n",
+       "      <td>0:02:14</td>\n",
+       "      <td>0:02:45</td>\n",
+       "      <td>76.28%</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>200</td>\n",
+       "      <td>182</td>\n",
+       "      <td>91.00%</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0:00:20</td>\n",
+       "      <td>0:02:22</td>\n",
+       "      <td>0:06:55</td>\n",
+       "      <td>72.73%</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>216</td>\n",
+       "      <td>198</td>\n",
+       "      <td>91.67%</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0:00:18</td>\n",
+       "      <td>0:02:38</td>\n",
+       "      <td>0:03:50</td>\n",
+       "      <td>74.30%</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>155</td>\n",
+       "      <td>145</td>\n",
+       "      <td>93.55%</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0:00:15</td>\n",
+       "      <td>0:02:29</td>\n",
+       "      <td>0:03:12</td>\n",
+       "      <td>79.61%</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>100.00%</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0:00:03</td>\n",
+       "      <td>0:02:06</td>\n",
+       "      <td>0:00:35</td>\n",
+       "      <td>97.30%</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Index  Incoming Calls  Answered Calls Answer Rate  Abandoned Calls  \\\n",
+       "0      1             217             204      94.01%               13   \n",
+       "1      2             200             182      91.00%               18   \n",
+       "2      3             216             198      91.67%               18   \n",
+       "3      4             155             145      93.55%               10   \n",
+       "4      5              37              37     100.00%                0   \n",
+       "\n",
+       "  Answer Speed (AVG) Talk Duration (AVG) Waiting Time (AVG)  \\\n",
+       "0            0:00:17             0:02:14            0:02:45   \n",
+       "1            0:00:20             0:02:22            0:06:55   \n",
+       "2            0:00:18             0:02:38            0:03:50   \n",
+       "3            0:00:15             0:02:29            0:03:12   \n",
+       "4            0:00:03             0:02:06            0:00:35   \n",
+       "\n",
+       "  Service Level (20 Seconds)  Answer Speed (sec)  \n",
+       "0                     76.28%                17.0  \n",
+       "1                     72.73%                20.0  \n",
+       "2                     74.30%                18.0  \n",
+       "3                     79.61%                15.0  \n",
+       "4                     97.30%                 3.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell - do not delete it\n",
     "import datetime\n",
